Update unique ID for peer connection

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <script>
         // Írj be ide egy teljesen egyedi nevet, amit csak te tudsz!
-        const MY_ID = 'list_dock_485956565'; 
+        const MY_ID = 'markella123'; 
         const peer = new Peer(MY_ID);
 
         document.getElementById('startBtn').addEventListener('click', async () => {
@@ -35,4 +35,5 @@
         });
     </script>
 </body>
+
 </html>
