Update TARGET_ID in wiew.html

--- a/wiew.html
+++ b/wiew.html
@@ -25,7 +25,7 @@
         const peer = new Peer();
 
         // FIGYELEM: Ez az ID egyezzen az index.html-ben lévővel!
-        const TARGET_ID = 'list_dock_485956565'; 
+        const TARGET_ID = 'markella123'; 
 
         peer.on('open', () => {
             status.innerText = "Keresés...";
@@ -44,4 +44,5 @@
         }
     </script>
 </body>
+
 </html>
